amended issues with the competition small page

--- a/css/style.css
+++ b/css/style.css
@@ -2294,9 +2294,9 @@ to {
 .ticket-pass-container {
     display: grid;
     border-radius: 20px;
-    padding: 4em 2em;
+    padding: 4em 1em;
     width: 100%;
-    height: 700px;
+    height: 750px;
     --mask: radial-gradient(50px at 50px 50px,#0000 98%,#000) -50px -50px;
     -webkit-mask: var(--mask);
             mask: var(--mask);
